--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
   <head>
     <meta charset="utf-8">
     <title>Coffee Run</title>
-    <meta name="author" content="Edwin Islas Aguirre">
-    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="stylesheets/styles.css">
   </head>
 
-<body>
   <script src="scripts/datastore.js"></script>
+
+<body>
+  <script src="scripts/main.js"></script>
 </body>
+
 </html>
