--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
+ 
   <head>
     <meta charset="utf-8">
     <title>Coffee Run</title>
+    <meta name="author" content="Edwin Islas Aguirre">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="stylesheets/styles.css">
   </head>
-
-  <script src="scripts/datastore.js"></script>
-
+ 
 <body>
-  <script src="scripts/main.js"></script>
-</body>
-
+  <script src="scripts/datastore.js" charset="utf-8"></script>
+<body>
+ 
 </html>
