--- a/index.html
+++ b/index.html
@@ -1,18 +1,59 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
- 
-  <head>
-    <meta charset="utf-8">
-    <title>Coffee Run</title>
-    <meta name="author" content="Edwin Islas Aguirre">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" href="stylesheets/styles.css">
-  </head>
- 
-<body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Coffee Run</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudfare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+  <meta name="author" content="Edwin Islas Aguirre">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet" href="stylesheets/styles.css">
+</head>
+
+<body class="container">
+  <header>
+    <h1>CoffeeRun</h1>
+  </header>
+  <section>
+    <div class="card card-default">
+      <div class="card-body">
+        <form data-coffee-order="form">
+          <!-- Input element will go  here -->
+          <div class="form-group">
+            <label for="Coffee Order">Coffee Order</label>
+            <input class="form-control" name="coffee" id="CoffeeOrder" autofocus>
+          </div>
+          <div class="form-group">
+            <label for="emailInput">Email</label>
+            <input class="form-control" type="email" name="emailAdress" id="emailInput"
+             value="" placeholder="user@company.com">
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="size" value="short" checked>
+              Short
+              </label> 
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="size" value="tall" checked>
+              Tall 
+              </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="size" value="grande">
+              Grande
+            </label>
+          </div> 
+        </form>
+      </div>
+    </div>
+  </section>
   <script src="scripts/datastore.js" charset="utf-8"></script>
   <script src="scripts/trucks.js" charset="utf-8"></script>
   <script src="scripts/main.js" charset="utf-8"></script>
-<body>
- 
+
+  <body>
+
 </html>
