--- a/index.html
+++ b/index.html
@@ -18,34 +18,49 @@
     <div class="card card-default">
       <div class="card-body">
         <form data-coffee-order="form">
-          <!-- Input element will go  here -->
           <div class="form-group">
             <label for="Coffee Order">Coffee Order</label>
             <input class="form-control" name="coffee" id="CoffeeOrder" autofocus>
           </div>
           <div class="form-group">
             <label for="emailInput">Email</label>
-            <input class="form-control" type="email" name="emailAdress" id="emailInput"
-             value="" placeholder="user@company.com">
+            <input class="form-control" type="email" name="emailAdress" id="emailInput" value=""
+              placeholder="user@company.com">
           </div>
           <div class="radio">
             <label>
               <input type="radio" name="size" value="short" checked>
               Short
-              </label> 
+            </label>
           </div>
           <div class="radio">
             <label>
               <input type="radio" name="size" value="tall" checked>
-              Tall 
-              </label>
+              Tall
+            </label>
           </div>
           <div class="radio">
             <label>
               <input type="radio" name="size" value="grande">
               Grande
             </label>
-          </div> 
+          </div>
+          <div class="form-group">
+            <label for="flavorShort">Flavor Shot</label>
+            <select id="flavorShot" class="form-control" name="flavor">
+              <option value="">None</option>
+              <option value="caramel">Caramel</option>
+              <option value="almond">Almond</option>
+              <option value="mocha">Mocha</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="strengthLevel">Strength</label>
+            <input name="strength" id="strengthLevel" type="range" 
+                   class="form-control-range" value="30">
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="reset" class="btn btn-secondary">Reset</button>
         </form>
       </div>
     </div>
