--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
       </div>
     </div>
   </section>
+  <script src="scripts/formhandler.js" charset="utf-8"></script>
   <script src="scripts/datastore.js" charset="utf-8"></script>
   <script src="scripts/trucks.js" charset="utf-8"></script>
   <script src="scripts/main.js" charset="utf-8"></script>
