--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
           </div>
           <div class="form-group">
             <label for="strengthLevel">Strength</label>
-            <input name="strength" id="strengthLevel" type="range" 
-                   class="form-control-range" value="30">
+            <input name="strength" id="strengthLevel" type="range" class="form-control-range" value="30">
           </div>
           <button type="submit" class="btn btn-primary">Submit</button>
           <button type="reset" class="btn btn-secondary">Reset</button>
@@ -65,6 +64,8 @@
       </div>
     </div>
   </section>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
+          charset="utf-8"></script> 
   <script src="scripts/formhandler.js" charset="utf-8"></script>
   <script src="scripts/datastore.js" charset="utf-8"></script>
   <script src="scripts/trucks.js" charset="utf-8"></script>
