--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
         <form data-coffee-order="form">
           <div class="form-group">
             <label for="Coffee Order">Coffee Order</label>
-            <input class="form-control" name="coffee" id="CoffeeOrder" autofocus>
+            <input class="form-control" name="coffee" id="CoffeeOrder" 
+                    autofocus required pattern="[a-zA-Z\s]+">
           </div>
           <div class="form-group">
             <label for="emailInput">Email</label>
-            <input class="form-control" type="email" name="emailAdress" id="emailInput" value=""
-              placeholder="user@company.com">
+            <input class="form-control" type="email" name="emailAdress" 
+                   id="emailInput" value="" placeholder="user@company.com" required>
           </div>
           <div class="radio">
             <label>
@@ -61,9 +62,11 @@
           <button type="submit" class="btn btn-primary">Submit</button>
           <button type="reset" class="btn btn-secondary">Reset</button>
         </form>
+      </div>
+    </div>
 
-        <!-- the checklist -->
-      </div class="card card-default">
+    <!-- the checklist -->
+    <div class="card card-default">
       <div class="card-body">
         <h4>Pending Orders:</h4>
         <div data-coffee-order="checklist">
@@ -73,6 +76,7 @@
 
   </section>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
+  <script src="scripts/validation.js" charset="utf-8"></script>
   <script src="scripts/checklist.js" charset="utf-8"></script>
   <script src="scripts/formhandler.js" charset="utf-8"></script>
   <script src="scripts/datastore.js" charset="utf-8"></script>
